--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-cloud-download">Download</a></li>
+								<li><a href="assets/apk/h2g2.apk" class="fa-cloud-download">Download</a></li>
 							</ul>
 						</footer>
 					</section>
