--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>O Guia do Mochileiro das Galaxias by @cgodrix</title>
+		<title>O Guia do Mochileiro das Galáxias by @cgodrix</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" width="15%" /></span>
-							<h1>O Guia do Mochileiro das Galaxias</h1>
+							<h1>O Guia do Mochileiro das Galáxias</h1>
 							<p>@cgodrix</p>
 						</header>
 						<!--
